# NutriSnap

./: README.md
nutrisnap-backend/: Dockerfile  pyproject.toml  requirements.txt
nutrisnap-backend/nutrisnap/: app.py  package-lock.json  package.json
nutrisnap-frontend/: .env  .gitignore  capacitor.config.json  hi.js  next.config.mjs  package-lock.json  package.json
nutrisnap-frontend/public/: ads.txt  goldanimate.json  manifest.json
nutrisnap-frontend/src/app/: Google.jsx  Hydroonline.jsx  globals.css  layout.js  page.js  setupProxy.js
nutrisnap-frontend/src/app/Profiletest/: page.js
nutrisnap-frontend/src/app/api/create-collag/: route.js
nutrisnap-frontend/src/app/api/create-nft/: route.js
nutrisnap-frontend/src/app/bodysnap/: page.jsx
nutrisnap-frontend/src/app/components/: Loader.jsx  Loading.jsx  NftCard.css  ViewNft.jsx  metadata.js
nutrisnap-frontend/src/app/context/: emailContext.jsx  profileContext.jsx
nutrisnap-frontend/src/app/foodcalender/: page.jsx
nutrisnap-frontend/src/app/foodsnap/: page.jsx
nutrisnap-frontend/src/app/login/: page.jsx
nutrisnap-frontend/src/app/nutricon/: nutritionist.json  page.jsx
nutrisnap-frontend/src/app/pricings/: page.jsx
nutrisnap-frontend/src/app/profile/: page.jsx  profile.jsx
nutrisnap-frontend/src/app/ranking/: page.jsx
nutrisnap-frontend/src/app/scoreboard/: page.jsx
nutrisnap-frontend/src/app/skincalender/: page.jsx
nutrisnap-frontend/src/app/skinsnap/: page.jsx
nutrisnap-frontend/src/app/utils/: firebase.js  server.js
nutrisnap-frontend/src/app/wearos/: page.jsx  plots.jsx
(+8 files in other folders)
